# dota2-scraper

./: .env.example  .gitignore  CHANGELOG.md  COMMANDS.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
dota2_scraper/: cli.py  config.py  logging_config.py  models.py  pipeline.py  snapshot.py  utils.py
dota2_scraper/fetchers/: dltv_fetcher.py  dotabuff_fetcher.py  liquipedia_fetcher.py  opendota_fetcher.py
dota2_scraper/parsers/: dltv_parser.py  dotabuff_parser.py  liquipedia_parser.py  opendota_parser.py
dota2_scraper/schemas/: schema.sql
dota2_scraper/storage/: database.py
tests/: test_liquipedia_parser.py  test_smoke.py  test_utils.py
