[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota2-esports-scraper"
version = "0.1.0"
description = "Async structural data extraction pipeline for esports analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.3",
    "cloakbrowser>=0.1.0",
    "httpx[http2]>=0.27.0",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "selectolax>=0.3.21",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
]

[project.scripts]
dota2-scraper = "dota2_scraper.cli:app"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = ["dota2_scraper"]
