[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dota2-scraper"
version = "0.1.0"
description = "Async Dota 2 esports scraper for Dotabuff, Liquipedia, OpenDota, and DLTV"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{ name = "ark-daemon" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiosqlite>=0.20.0",
    "beautifulsoup4>=4.12.3",
    "cloakbrowser>=0.1.0",
    "httpx[http2]>=0.27.0",
    "loguru>=0.7.2",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "selectolax>=0.3.21",
    "tenacity>=8.2.3",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
dota2-scraper = "dota2_scraper.cli:app"

[project.urls]
Homepage = "https://github.com/ark-daemon/dota2-scraper"
Repository = "https://github.com/ark-daemon/dota2-scraper"

[tool.setuptools.packages.find]
where = ["."]
include = ["dota2_scraper*"]

[tool.setuptools.package-data]
dota2_scraper = ["schemas/*.sql"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
